fix: refactor patch route and create custom exceptions